--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   <body>
         <main>
       
-    <section id="home" class="py-5 text-center">
+    <section id="home" class="py-5 text-center text-white">
         <div class="container">
             <main class="text-center">
                 <img class="d-block mx-auto my-4" src="./assets/logo/logo.png" alt="brand logo" height="100px">
@@ -38,26 +38,26 @@
         </div>
     </section>
     <section id="about" class="py-5 text-center container">
-        <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-              <h1 class="fw-light">Album example</h1>
-              <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-              <p>
-                <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-              </p>
+        <div class="row py-lg-8">
+            <div class="col-lg-10 col-md-8 mx-auto">
+              <h1 class="fw-light">ABOUT US</h1>
+                <p class="fs-5">When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive
+                and agile. </p>
+                <p class="fs-5"> Our approach unifies design, development, and product management to create exceptional products.</p>
+                <p class="fs-5">We start each project by understanding your business goals, the user's needs and the product requirements </p>
+                <p class="fs-5">We start each project by understanding your business goals, the user's needs, and the product requirements</p>
+                <p class="fs-5">Then we help translate them into effective and elegant solutions. </p> 
             </div>
           </div>
     </section>
-    <section id="services" class="py-5 text-center">
+    <section id="services" class="py-5 text-center text-white">
         <div class="row py-lg-5">
-            <div class="col-lg-6 col-md-8 mx-auto">
-              <h1 class="fw-light">Our Services</h1>
-              <p class="lead text-muted">Something short and leading about the collection below—its contents, the creator, etc. Make it short and sweet, but not too short so folks don’t simply skip over it entirely.</p>
-              <p>
-                <a href="#" class="btn btn-primary my-2">Main call to action</a>
-                <a href="#" class="btn btn-secondary my-2">Secondary action</a>
-              </p>
+            <div class="col-lg-10 col-md-8 mx-auto">
+              <h1 class="fw-light">SERVICES</h1>
+              <p class="fs-5">
+                Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</p>
+                <p class="fs-5"> The outcome of this scoping session a proposal or high-level statement of work.</p>
+                <p class="fs-5">based on your requirements, we can provide a complete offering or just the pieces you need.</p>              
             </div>
           </div>       
     </section>
@@ -86,7 +86,7 @@
                 </div>
             </div>
     </section>
-    <section id="contacts" class="py-5 text-center">
+    <section id="contacts" class="py-5 text-center text-white">
         <div class="container"></div>
         <div class="row justify-content-md-center mt-5">
             <div class="col-md-8 mx-auto ">
@@ -104,14 +104,14 @@
             </form>
               
             </div>
-          </div>         
-            <footer class="mt-5 text-white-50 bg-dark">
-                <div class="container">
-                    <p>Created by <a href="#" class="text-white mt-5 text-center">Maryanne Njuguna</a>, by <a href="https://linktr.ee/themaryanjuguna" class="text-white">@themaryanjuguna</a>.</p>
-                </div>
-            </footer>
-        </div>
+          </div>  
+        </div>       
     </section>
+    <footer class="mt-5 text-black bg-white text-center">
+      <div class="container">
+          <p>DELANI STUDIO<br>2019</p>
+      </div>
+  </footer>
         <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(h),p=c.getElementsByTagName(h)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/30c5f3d9a7cf2e60623465baf/e1f419427b5f5dd156e9f0690.js");</script>
