--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
         <div class="row py-lg-8">
             <div class="col-lg-10 col-md-8 mx-auto">
               <h1 class="fw-light">ABOUT US</h1>
-                <p class="fs-5">When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive
+                <p class="fs-6">When you work with us, you are part of a team of committed collaborators. All aspects of our software development process are integrated, interactive
                 and agile. </p>
-                <p class="fs-5"> Our approach unifies design, development, and product management to create exceptional products.</p>
-                <p class="fs-5">We start each project by understanding your business goals, the user's needs and the product requirements </p>
-                <p class="fs-5">We start each project by understanding your business goals, the user's needs, and the product requirements</p>
-                <p class="fs-5">Then we help translate them into effective and elegant solutions. </p> 
+                <p class="fs-6"> Our approach unifies design, development, and product management to create exceptional products.</p>
+                <p class="fs-6">We start each project by understanding your business goals, the user's needs and the product requirements </p>
+                <p class="fs-6">We start each project by understanding your business goals, the user's needs, and the product requirements</p>
+                <p class="fs-6">Then we help translate them into effective and elegant solutions. </p> 
             </div>
           </div>
     </section>
@@ -54,10 +54,10 @@
         <div class="row py-lg-5">
             <div class="col-lg-10 col-md-8 mx-auto">
               <h1 class="fw-light">SERVICES</h1>
-              <p class="fs-5">
+              <p class="fs-6">
                 Before we sign a contract or write a line of code our team will spend the necessary time needed to understand your product vision</p>
-                <p class="fs-5"> The outcome of this scoping session a proposal or high-level statement of work.</p>
-                <p class="fs-5">based on your requirements, we can provide a complete offering or just the pieces you need.</p>              
+                <p class="fs-6"> The outcome of this scoping session a proposal or high-level statement of work.</p>
+                <p class="fs-6">based on your requirements, we can provide a complete offering or just the pieces you need.</p>              
             </div>
           </div>       
     </section>
@@ -65,25 +65,22 @@
         <div class="container">
             
                 <div class="row text-center">
-                    <h1 class="mt-5 ">Our Portfolio</h1>
-                    <p>
-                       Lorem ipsum dolor sit amet consectetur adipisicing elit. Molestiae magni eum, similique neque obcaecati deleniti aliquam ad ducimus eius libero cum velit labore, laudantium soluta! Deleniti magni autem rerum blanditiis!
-                    </p>   
+                    <h1 class="mt-5 ">WHAT WE DO</h1>                     
                 </div>
                 <div class="row justify-content-around mt-5">
                     <div class="col-md-4">
-                        <img src="https://demo.graygrids.com/themes/photography/assets/images/services-1.jpg" height="80%" width="100%" alt="service 1">
-                        <h3 class="fw-3 mt-3 text-center">Photography</h3>
+                        <img src="./assets/services_icons/design_icon.png" width="30%" alt="design_icon pen">
                     </div>
                     <div class="col-md-4">
-                       <img src="https://demo.graygrids.com/themes/photography/assets/images/services-1.jpg" height="80%" width="100%" alt="service 2">
-                       <h3 class="fw-3 mt-3 text-center">Fashion Photography</h3>
+                       <img src="./assets/services_icons/dev_icon.png" width="30%" alt="design_icon dev">
                     </div>
                     <div class="col-md-4">
-                       <img src="https://demo.graygrids.com/themes/photography/assets/images/services-3.jpg" height="80%" width="100%" alt="service 3">
-                       <h3 class="fw-3 mt-3 text-center">Wedding Videography</h3>
-                    </div>
+                       <img src="./assets/services_icons/product_icon.png" width="30%" alt="design_icon product">
+                    </div>                
                 </div>
+                <div class="row text-center">
+                  <h1 class="mt-5 ">WHAT WE DO</h1>                     
+              </div>
             </div>
     </section>
     <section id="contacts" class="py-5 text-center text-white">
@@ -109,7 +106,19 @@
     </section>
     <footer class="mt-5 text-black bg-white text-center">
       <div class="container">
-          <p>DELANI STUDIO<br>2019</p>
+        <div class="footer">
+          <img src="./assets/social_icons/twitter.png" alt="twitter" height="50px">
+          <img src="./assets/social_icons/dribble.png" alt="dribble" height="50px">
+          <img src="./assets/social_icons/facebook.png" alt="facebook" height="50px">
+          <img src="./assets/social_icons/g_plus.png" alt="g_plus" height="50px">
+          <img src="./assets/social_icons/skype.png" alt="skype" height="50px">
+          <img src="./assets/social_icons/stumble_upon.png" alt="stumble_upon" height="50px">
+          <img src="./assets/social_icons/behance.png" alt="behance" height="50px">
+          <img src="./assets/social_icons/pinterest.png" alt="pinterest" height="50px">
+          <img src="./assets/social_icons/flickr.png" alt="flickr" height="50px">
+          <img src="./assets/social_icons/dribble.png" alt="dribble" height="50px">
+        </div>
+          <p class="mt-3">DELANI STUDIO<br>2019</p>
       </div>
   </footer>
         <!-- JavaScript Bundle with Popper -->
