updating service and portfolio alignment

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <h1>WELCOME</h1>
                 <h1>DELANI STUDIO</h1>
                 <p class="lead">Amazing people are making amazing designs in a fun environment.</p>
-                <img class="d-block mx-auto my-4" src="./assets/mouse_click.png" alt="mouse_click">
+                <img class="d-block mx-auto py-5 my-4" src="./assets/mouse_click.png" alt="mouse_click">
               </main>
         </div>
     </section>
@@ -67,19 +67,69 @@
                 <div class="row text-center">
                     <h1 class="mt-5 ">WHAT WE DO</h1>                     
                 </div>
-                <div class="row justify-content-around mt-5">
-                    <div class="col-md-4">
+                <div class="row justify-content-md-center mt-5">
+                    <div class="col-4">
                         <img src="./assets/services_icons/design_icon.png" width="30%" alt="design_icon pen">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-4">
                        <img src="./assets/services_icons/dev_icon.png" width="30%" alt="design_icon dev">
                     </div>
-                    <div class="col-md-4">
+                    <div class="col-4">
                        <img src="./assets/services_icons/product_icon.png" width="30%" alt="design_icon product">
                     </div>                
                 </div>
                 <div class="row text-center">
-                  <h1 class="mt-5 ">WHAT WE DO</h1>                     
+                  <h1 class="mt-5">WHAT WE DO</h1>                     
+              </div>
+              <div class="row justify-content-around mt-5">
+                <div class="container">
+                  <div class="row row-cols-3">
+
+                    <div class="col-6 col-sm-3">
+                      <div class="col-md-3">
+                        <img src="./assets/portfolio/work1.jpg" height="100%" alt="design_icon product">
+                     </div>   
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <div class="col-md-3">
+                        <img src="./assets/portfolio/work2.jpg" height="100%" alt="design_icon product">
+                     </div>   
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <div class="col-md-3">
+                        <img src="./assets/portfolio/work3.jpg" height="100%" alt="design_icon product">
+                     </div>   
+                    </div>
+                    <div class="col-6 col-sm-3">
+                      <div class="col-md-3">
+                        <img src="./assets/portfolio/work4.jpg" height="100%" alt="design_icon product">
+                     </div>   
+                    </div>
+
+                    </div>
+                    <div class="row">
+                      <div class="col-6 col-sm-3">
+                        <div class="col-md-3">
+                          <img src="./assets/portfolio/work5.jpg" height="100%" alt="design_icon product">
+                       </div>   
+                      </div>
+                      <div class="col-6 col-sm-3">
+                        <div class="col-md-3">
+                          <img src="./assets/portfolio/work6.jpg" height="100%" alt="design_icon product">
+                       </div>   
+                      </div>
+                      <div class="col-6 col-sm-3">
+                        <div class="col-md-3">
+                          <img src="./assets/portfolio/work7.jpg" height="100%" alt="design_icon product">
+                       </div>   
+                      </div>
+                      <div class="col-6 col-sm-3">
+                        <div class="col-md-3">
+                          <img src="./assets/portfolio/work8.jpg" height="100%" alt="design_icon product">
+                       </div>   
+                      </div>
+                      </div>
+                    </div>
               </div>
             </div>
     </section>
