--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <h1 class="mt-5 ">WHAT WE DO</h1>                 
             </div>
 
-            <div class="row justify-content-evenly offset-md-2 mt-5">
+            <div class="row justify-content-evenly mt-5">
                 <div class="col-md-4">
                     <img class="d-block mx-auto my-4" src="./assets/services_icons/design_icon.png" width="50%" alt="design_icon">
                     <h4 class="text-center mt-3">DESIGN</h4>
@@ -98,7 +98,7 @@
                 </div>
 
                 <div class="col-md-4 mt-3">
-                   <img class="d-block mx-auto my-4" src="./assets/services_icons/product_icon.png" width="50%"  alt="product icon">
+                   <img class="d-block mx-auto my-4" src="./assets/services_icons/product_icon.png" width="40%"  alt="product icon">
                    <div>
                     <h4 class="text-center mt-3">PRODUCT MANAGEMENT</h4>
                     <p class="fs-6 text-center">                    
@@ -111,6 +111,7 @@
                    </div>
                 </div>                
             </div>
+
         </div>
 
         <div class="container">
@@ -118,21 +119,41 @@
                   <h1 class="mt-5">PORTFOLIO</h1>                     
               </div>
 
-              <div class="row justify-content-evenly offset-md-2 mt-5">
-                <div class="col-md-2">
-                    <img src="./assets/portfolio/work1.jpg" height="100%" alt="design_icon">
-                </div>
-                <div class="col-md-2 mt-3">
-                   <img src="./assets/portfolio/work2.jpg" height="100%" alt="dev_icon">
+              <div class="row justify-content-evenly mt-5">
+                <div class="col-sm-4">
+                    <img class="d-block mx-auto my-4" src="./assets/portfolio/work1.jpg" alt="design_icon">
                 </div>
 
-                <div class="col-md-2 mt-3">
-                   <img src="./assets/portfolio/work3.jpg" height="100%" alt="product icon">
-                </div>   
-                
-                <div class="col-md-2 mt-3">
-                  <img src="./assets/portfolio/work4.jpg" height="100%" alt="product icon">
-               </div>   
+                <div class="col-sm-4">
+                   <img class="d-block mx-auto my-4" src="./assets/portfolio/work2.jpg"  alt="dev_icon">
+                </div>
+
+                <div class="col-sm-4">
+                   <img class="d-block mx-auto my-4" src="./assets/portfolio/work3.jpg" alt="product icon">
+                </div> 
+
+                <div class="col-sm-4">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work4.jpg" alt="product icon">
+                </div> 
+
+                <div class="col-md-4">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work5.jpg" alt="product icon">
+                </div> 
+
+                <div class="col-md-4">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work6.jpg" alt="product icon">
+                </div> 
+
+                <div class="col-md-4">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work7.jpg" alt="product icon">
+                </div> 
+
+                <div class="col-md-4">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work8.jpg" alt="product icon">
+                </div> 
+
+              </div>              
+            </div>
 
             </div>
         </div>
@@ -143,8 +164,9 @@
     <section id="contacts" class="py-5 text-center text-white">
         <div class="container"></div>
         <div class="row justify-content-md-center mt-5">
-            <div class="col-md-8 mx-auto ">
+            <div class="d-block mx-auto my-4">
               <h1 class="fw-light">Contact us</h1>
+              
               <form id="#delaniForm" action="mailto:themaryanjuguna@gmail.com">                           
                 <div class="col-md-6">
                     <div class="form-check-inline col-md-5 mt-3">
