--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="./assets/styles/css/style.css" type="text/css">
-    <link rel="stylesheet" href="./assets/styles/js/jquery-3.6.0.js" type="text/jquery-3">
-    <link rel="stylesheet" href="./assets/styles/js/scripts.js" type="text/js">
+    <link rel="stylesheet" href="./assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="./assets/js/jquery-3.6.0.js" type="text/jquery-3">
+    <link rel="stylesheet" href="./assets/js/scripts.js" type="text/js">
 
 
 
@@ -73,8 +73,8 @@
                 <h1 class="mt-5 ">WHAT WE DO</h1>                 
             </div>
 
-            <div class="row justify-content-evenly mt-5">
-                <div class="col-md-4 front" id="card">
+            <div class="row justify-content-evenly mt-5 front">
+                <div class="col-md-4" id="flipcard">
                     <img class="d-block mx-auto my-4" src="./assets/services_icons/design_icon.png" alt="design_icon">
                    
                     <div class="back">
@@ -169,7 +169,7 @@
 
     </section>
 
-<section>
+<section id="contacts" class="py-5 text-center text-white">
     <div class="row py-lg-5">
       <div class="col-lg-10 col-md-8 mx-auto">
         
