what we do update

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <h1 class="mt-5 ">WHAT WE DO</h1>                 
             </div>
 
-            <div class="row justify-content-evenly mt-5 front">
+            <div class="row justify-content-evenly mt-5">
                 <div class="col-md-4" id="flipcard">
                     <img class="d-block mx-auto my-4" src="./assets/services_icons/design_icon.png" alt="design_icon">
                    
@@ -90,23 +90,23 @@
                         </p>
                       </div>
                 </div>
-                <div class="col-md-4 mt-3">
-                   <img class="d-block mx-auto my-4" src="./assets/services_icons/dev_icon.png" width="50%" alt="dev_icon">
-                    <div>
+                <div class="col-md-4 mt-3" id="flipcard" >
+                   <img class="d-block mx-auto my-4" src="./assets/services_icons/dev_icon.png" alt="dev_icon">
+                    <div class="back">
                       <h5 class="text-center mt-3">DEVELOPMENT</h5>
                         <p class="fs-6 text-center">                    
                           All engineers are fluent in the latest enterprise, mobile
                           and web development technologies
                           They collaborate with your team to write and improve
-                          code on a daily basis, using proven practices such as
+                          code on a daily basis, using proven p ractices such as
                           test-driven development and pair programming
                         </p>
                     </div>
                 </div>
 
-                <div class="col-md-4 mt-3">
-                   <img class="d-block mx-auto my-4" src="./assets/services_icons/product_icon.png" width="42%"  alt="product icon">
-                   <div>
+                <div class="col-md-4 mt-3" id="flipcard">
+                   <img class="d-block mx-auto my-4" src="./assets/services_icons/product_icon.png"alt="product icon">
+                   <div class="back">
                     <h5 class="text-center mt-3">PRODUCT MANAGEMENT</h5>
                     <p class="fs-6 text-center">                    
                       Planning and development are iterative. Because we are
