services & Prtfolio alignment update check

--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
 
   </head>
   <body>
-        <main>
       
     <section id="home" class="py-5 text-center text-white">
         <div class="container mt-5">
@@ -47,8 +46,8 @@
                 <p class="lead">Amazing people are making amazing designs in a fun environment.</p>
                 <div class="grid py-5" style="--bs-columns: 12;"></div>
 
-                <img class="d-block mx-auto py-5" src="./assets/mouse_click.png" alt="mouse_click">
-              </main>
+                <a href="#portfolio"><img class="d-block mx-auto py-5" src="./assets/mouse_click.png" alt="mouse_click"></a>
+             </main>
         </div>
     </section>
     <section id="about" class="py-5 text-center container">
