--- a/index.html
+++ b/index.html
@@ -77,14 +77,15 @@
    
    
     <section id="portfolio">
+      <section id="portfolio">
         <div class="container">
             <div class="row text-center">
                 <h1 class="mt-5">WHAT WE DO</h1>                 
             </div>
                 <div class="row mt-5">
                   <div class="col-md-4 g-col-6">
-                      <img src="./assets/services_icons/design_icon.png" alt="service 1">
-                      <h3 class="mt-3 text-center">DESIGN</h3>
+                      <img class="d-block mx-auto align-items-center my-5" src="./assets/services_icons/design_icon.png" alt="service 1">
+                      <h5 class="mt-3 text-center">DESIGN</h5>
                       <div>
                           <p class="fs-6 text-center">                    
                               Our design practice offers a full range of services
@@ -99,8 +100,8 @@
                       </div>
                   </div>
                   <div class="col-md-4 g-col-6">
-                     <img src="./assets/services_icons/dev_icon.png"  alt="service 2">
-                     <h3 class="mt-3 text-center">DEVELOPMENT</h3>
+                     <img class="d-block mx-auto align-items-center my-5" src="./assets/services_icons/dev_icon.png"  alt="service 2">
+                     <h5 class="mt-3 text-center">DEVELOPMENT</h5>
                      <div>
                       <p class="fs-6 text-center">                    
                         All engineers are fluent in the latest enterprise, mobile
@@ -112,8 +113,8 @@
                      </div>
                   </div>
                   <div class="col-md-4 ">
-                     <img src="/assets/services_icons/product_icon.png" alt="service 3">
-                     <h3 class="fw-3 mt-3 text-center">PRODUCT MANAGEMENT</h3>
+                     <img class="d-block mx-auto align-items-center my-5" src="/assets/services_icons/product_icon.png" alt="service 3">
+                     <h5 class="fw-3 mt-3 text-center">PRODUCT MANAGEMENT</h5>
                      <div>
                         <p class="fs-6 text-center">                    
                           Planning and development are iterative. Because we are
@@ -138,46 +139,42 @@
               </div>
 
               <div class="row justify-content-evenly mt-5">
-                <div class="col-sm-4">
-                    <img class="d-block mx-auto my-4" src="./assets/portfolio/work1.jpg" alt="design_icon">
+                <div class="col-sm-3">
+                    <img class="d-block mx-auto my-4" src="./assets/portfolio/work1.jpg" width="95%" alt="design_icon">
                 </div>
 
-                <div class="col-sm-4">
-                   <img class="d-block mx-auto my-4" src="./assets/portfolio/work2.jpg"  alt="dev_icon">
+                <div class="col-sm-3">
+                   <img class="d-block mx-auto my-4" src="./assets/portfolio/work2.jpg" width="95%" alt="dev_icon">
                 </div>
 
-                <div class="col-sm-4">
-                   <img class="d-block mx-auto my-4" src="./assets/portfolio/work3.jpg" alt="product icon">
+                <div class="col-sm-3">
+                   <img class="d-block mx-auto my-4" src="./assets/portfolio/work3.jpg" width="95%" alt="product icon">
                 </div> 
 
-                <div class="col-sm-4">
-                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work4.jpg" alt="product icon">
+                <div class="col-sm-3">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work4.jpg" width="95%" alt="product icon">
                 </div> 
 
-                <div class="col-md-4">
-                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work5.jpg" alt="product icon">
+                <div class="col-md-3">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work5.jpg" width="95%" alt="product icon">
                 </div> 
 
-                <div class="col-md-4">
-                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work6.jpg" alt="product icon">
+                <div class="col-md-3">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work6.jpg" width="95%" alt="product icon">
                 </div> 
 
-                <div class="col-md-4">
-                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work7.jpg" alt="product icon">
+                <div class="col-md-3">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work7.jpg" width="95%" alt="product icon">
                 </div> 
 
-                <div class="col-md-4">
-                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work8.jpg" alt="product icon">
+                <div class="col-md-3">
+                  <img class="d-block mx-auto my-4" src="./assets/portfolio/work8.jpg" width="95%" alt="product icon">
                 </div> 
-
               </div>              
             </div>
-
             </div>
+          </div>        
         </div>
-              
-        </div>
-
     </section>
 
 <section id="contacts" class="py-5 text-center text-white">
