--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,7 @@
                 </div>
                     <div class="row mt-5">
                       <div class="col-md-4 g-col-6">
-                          <img src="./assets/services_icons/design_icon.png" alt="service 1">
+                          <img class="d-block mx-auto align-items-center my-5" src="./assets/services_icons/design_icon.png" alt="service 1">
                           <h5 class="mt-3 text-center">DESIGN</h5>
                           <div>
                               <p class="fs-6 text-center">                    
@@ -57,7 +57,7 @@
                           </div>
                       </div>
                       <div class="col-md-4 g-col-6">
-                         <img src="./assets/services_icons/dev_icon.png"  alt="service 2">
+                         <img class="d-block mx-auto align-items-center my-5" src="./assets/services_icons/dev_icon.png"  alt="service 2">
                          <h5 class="mt-3 text-center">DEVELOPMENT</h5>
                          <div>
                           <p class="fs-6 text-center">                    
@@ -70,7 +70,7 @@
                          </div>
                       </div>
                       <div class="col-md-4 ">
-                         <img src="/assets/services_icons/product_icon.png" alt="service 3">
+                         <img class="d-block mx-auto align-items-center my-5" src="/assets/services_icons/product_icon.png" alt="service 3">
                          <h5 class="fw-3 mt-3 text-center">PRODUCT MANAGEMENT</h5>
                          <div>
                             <p class="fs-6 text-center">                    
