--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                      </div>
                   </div>
                   <div class="col-md-4 ">
-                     <img class="d-block mx-auto align-items-center my-5" src="/assets/services_icons/product_icon.png" alt="service 3">
+                     <img class="d-block mx-auto align-items-center my-5" src="./assets/services_icons/product_icon.png" alt="service 3">
                      <h5 class="fw-3 mt-3 text-center">PRODUCT MANAGEMENT</h5>
                      <div>
                         <p class="fs-6 text-center">                    
