CSS image issue

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
   </head>
   <body>
       
-    <section id="home" class="py-5 text-center text-white">
+    <section id="home" class="home py-5 text-center text-white">
         <div class="container mt-5">
             <main class="text-center">
                 <img class="d-block mx-auto align-items-center my-5" src="./assets/logo/logo.png" alt="brand logo" height="100px">
@@ -62,7 +62,7 @@
             </div>
           </div>
     </section>
-    <section id="services" class="py-5 text-center text-white">
+    <section id="services" class=" services py-5 text-center text-white">
       <div class="row py-lg-8 mt-5">
           <div class="col-lg-10 col-md-8 mx-auto">
               <h1 class="fw-light">SERVICES</h1>
@@ -177,7 +177,7 @@
         </div>
     </section>
 
-<section id="contacts" class="py-5 text-center text-white">
+<section id="contacts" class="contacts py-5 text-center text-white">
     <div class="row align-items-center">
       <div class="col-12 .offset-md-3">
         
