--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/css/style.css" type="text/css">
-    <link rel="stylesheet" href="/assets/js/jquery-3.6.0.js" type="text/jquery-3">
+    <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/js/jquery-3.6.0.js" type="text/jquery-3">
     <script src="https://code.jquery.com/jquery-3.6.0.js" integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk=" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="/assets/js/scripts.js">
-    <link rel="stylesheet" href="/assets/js/jquery.flip.min.js">
+    <link rel="stylesheet" href="assets/js/scripts.js">
+    <link rel="stylesheet" href="assets/js/jquery.flip.min.js">
     <script src="https://code.jquery.com/jquery-2.1.4.min.js"></script>
     <!--MailChimp Integration-->
     <script id="mcjs">!function(c,h,i,m,p){m=c.createElement(delaniForm),p=c.getElementsByTagName(delaniForm)[0],m.async=1,m.src=i,p.parentNode.insertBefore(m,p)}(document,"script","https://chimpstatic.com/mcjs-connected/js/users/30c5f3d9a7cf2e60623465baf/e1f419427b5f5dd156e9f0690.js");</script>
