--- a/index.html
+++ b/index.html
@@ -225,18 +225,19 @@
         
         <h1 class="fw-light">Contact us</h1>
               
-        <form id="delaniForm" name="#delaniForm" action="#" onsubmit="validateForm()" onclick="javascript:alert('Thank you for contacting us, your message has been Recieved!')" method="post">                           
+        <form id="delaniForm" name="delaniForm" action="#" method="post" onsubmit="validateForm()">                           
           <div class="col-md-12 align-self-center">
               <div class="form-check-inline col-md-5 mt-3">
-                  <input type="name" class="form-control" autocomplete="false" id="name" placeholder="Enter your name" name="name" required>
+                  <input type="name" class="form-control" autocomplete="off" id="name" placeholder="Enter your name" name="name"  required>
               </div>
               <div class="form-check-inline col-md-5 mt-3">
-                  <input type="email" class="form-control" autocomplete="false" id="email" placeholder="Enter email" name="email" required>
+                  <input type="email" class="form-control" for="inputEmail3" autocomplete="off" id="email" placeholder="Enter email" name="email" required>
               </div><br>
               <div class="form-check-inline col-md-10 mt-3">
-                <textarea class="form-control col-md-10 mt-3" autocomplete="true" placeholder="Leave a comment here" id="comments" style="height: 100px" required></textarea>
+                <textarea class="form-control col-md-10 mt-3" rows="4" cols="60" autocomplete="off" placeholder="Leave a comment here" id="comments" onclick="javascript:alert('Thank you for contacting us, your message has been Recieved!')"></textarea>
             </div>
             </div>
+        </form>
 
       </div>
     </div>   
