Updating Contact Section

--- a/index.html
+++ b/index.html
@@ -225,7 +225,7 @@
         
         <h1 class="fw-light">Contact us</h1>
               
-        <form id="delaniForm" name="delaniForm" action="#" method="post" onsubmit="validateForm()">                           
+        <form id="delaniForm" action="https://creativemania.us18.list-manage.com/subscribe/post?u=30c5f3d9a7cf2e60623465baf&amp;id=7036b94735" method="post" onsubmit="validateForm()">                           
           <div class="col-md-12 align-self-center">
               <div class="form-check-inline col-md-5 mt-3">
                   <input type="name" class="form-control" autocomplete="off" id="name" placeholder="Enter your name" name="name"  required>
@@ -234,7 +234,7 @@
                   <input type="email" class="form-control" for="inputEmail3" autocomplete="off" id="email" placeholder="Enter email" name="email" required>
               </div><br>
               <div class="form-check-inline col-md-10 mt-3">
-                <textarea class="form-control col-md-10 mt-3" rows="4" cols="60" autocomplete="off" placeholder="Leave a comment here" id="comments" onclick="javascript:alert('Thank you for contacting us, your message has been Recieved!')"></textarea>
+                <textarea class="form-control col-md-10 mt-3" rows="3" cols="50" autocomplete="off" placeholder="Leave a comment here" id="comments" onclick="javascript:alert('Thank you for contacting us, your message has been Recieved!')"></textarea>
             </div>
             </div>
         </form>
